--- a/uniCloud-aliyun/cloudfunctions/application/package.json
+++ b/uniCloud-aliyun/cloudfunctions/application/package.json
@@ -9,6 +9,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"explain-unicloud": "file:../../../uni_modules/explain-unicloud/uniCloud/cloudfunctions/common/explain-unicloud"
+		"explain-unicloud": "file:../../../uni_modules/explain-unicloud/uniCloud/cloudfunctions/common/explain-unicloud",
+		"explain-validator": "file:../../../uni_modules/explain-validator/uniCloud/cloudfunctions/common/explain-validator"
 	}
 }
