--- a/uni_modules/explain-creq/package.json
+++ b/uni_modules/explain-creq/package.json
@@ -1,19 +1,23 @@
 {
   "id": "explain-creq",
-  "displayName": "explain-creq",
-  "version": "1.0.0",
-  "description": "explain-creq",
+  "displayName": "explain扩展模块-explain-creq",
+  "version": "1.0.2",
+  "description": "explain扩展模块，主要用于网络请求，支持http请求和云函数，已内置请求拦截器。",
   "keywords": [
-    "explain-creq"
+    "explain",
+    "explain扩展",
+    "网络请求",
+    "云函数请求",
+    "拦截器"
 ],
-  "repository": "",
+  "repository": "https://github.com/explaincloud/explain-creq",
   "engines": {
     "HBuilderX": "^3.1.0"
   },
   "dcloudext": {
     "category": [
         "JS SDK",
-        "JS SDK"
+        "通用 SDK"
     ],
     "sale": {
       "regular": {
@@ -27,48 +31,48 @@
       "qq": ""
     },
     "declaration": {
-      "ads": "",
-      "data": "",
-      "permissions": ""
+      "ads": "无",
+      "data": "无",
+      "permissions": "无"
     },
-    "npmurl": ""
+    "npmurl": "https://www.npmjs.com/package/explain-creq"
   },
   "uni_modules": {
     "dependencies": [],
     "encrypt": [],
     "platforms": {
       "cloud": {
-        "tcb": "u",
-        "aliyun": "u"
+        "tcb": "y",
+        "aliyun": "y"
       },
       "client": {
         "App": {
-          "app-vue": "u",
-          "app-nvue": "u"
+          "app-vue": "y",
+          "app-nvue": "y"
         },
         "H5-mobile": {
-          "Safari": "u",
-          "Android Browser": "u",
-          "微信浏览器(Android)": "u",
-          "QQ浏览器(Android)": "u"
+          "Safari": "y",
+          "Android Browser": "y",
+          "微信浏览器(Android)": "y",
+          "QQ浏览器(Android)": "y"
         },
         "H5-pc": {
-          "Chrome": "u",
-          "IE": "u",
-          "Edge": "u",
-          "Firefox": "u",
-          "Safari": "u"
+          "Chrome": "y",
+          "IE": "y",
+          "Edge": "y",
+          "Firefox": "y",
+          "Safari": "y"
         },
         "小程序": {
-          "微信": "u",
-          "阿里": "u",
-          "百度": "u",
-          "字节跳动": "u",
-          "QQ": "u"
+          "微信": "y",
+          "阿里": "y",
+          "百度": "y",
+          "字节跳动": "y",
+          "QQ": "y"
         },
         "快应用": {
-          "华为": "u",
-          "联盟": "u"
+          "华为": "y",
+          "联盟": "y"
         }
       }
     }
