--- a/uni_modules/explain-unicloud-mvc/package.json
+++ b/uni_modules/explain-unicloud-mvc/package.json
@@ -1,12 +1,15 @@
 {
   "id": "explain-unicloud-mvc",
-  "displayName": "explain-unicloud-mvc",
-  "version": "1.0.0",
-  "description": "explain-unicloud-mvc",
+  "displayName": "explain扩展模块-explain-unicloud-mvc",
+  "version": "1.0.1",
+  "description": "explain扩展模块，主要用于web服务端渲染页面，类似ASP.NET MVC、PHP、JSP。",
   "keywords": [
-    "explain-unicloud-mvc"
+    "explain",
+    "explain扩展",
+    "Web",
+    "MVC"
 ],
-  "repository": "",
+  "repository": "https://github.com/explaincloud/explain-unicloud-mvc",
   "engines": {
     "HBuilderX": "^3.1.0"
   },
@@ -27,19 +30,19 @@
       "qq": ""
     },
     "declaration": {
-      "ads": "",
-      "data": "",
-      "permissions": ""
+      "ads": "无",
+      "data": "无",
+      "permissions": "无"
     },
-    "npmurl": ""
+    "npmurl": "https://www.npmjs.com/package/explain-unicloud-mvc"
   },
   "uni_modules": {
     "dependencies": [],
     "encrypt": [],
     "platforms": {
       "cloud": {
-        "tcb": "u",
-        "aliyun": "u"
+        "tcb": "y",
+        "aliyun": "y"
       },
       "client": {
         "App": {
