--- a/uni_modules/explain-unicloud-mvc/package.json
+++ b/uni_modules/explain-unicloud-mvc/package.json
@@ -42,7 +42,7 @@
     "platforms": {
       "cloud": {
         "tcb": "y",
-        "aliyun": "y"
+        "aliyun": "n"
       },
       "client": {
         "App": {
